--- a/snippet/home-snippet-2.html
+++ b/snippet/home-snippet-2.html
@@ -1,7 +1,7 @@
   <div class="jumbotron">
     <div class="headbox text-center">Sign In</div>
       <div class="content">
-        <form>
+        <form action="/process_pos" method="POST">
           <div class=".flex-container">
             <div class="text-center .col-lg-1 .col-md-1 .col-sm-1">
           <label for="u">Please Enter User Name </label>
@@ -20,7 +20,7 @@
       </div>
       <div class="container">
       <div class="text-center cc">
-      <input type="submit" value="Enter" onclick="$dc.submit2(document.getElementById('u1'),document.getElementById('u2'),document.getElementById('u3'))">
+      <input type="submit" value="Enter">
       </div>
       </div>
       </form>
