--- a/LOGIN.html
+++ b/LOGIN.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Project Bank</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 	<link rel="icon" href="/favicon.ico" type="images\x-icon.ico">
@@ -15,11 +15,11 @@
 	<script>
 		window.onload=function(){
         $dc.buildAndShowHomeHTML();
-    };
+    };//collapse //target="_blank" //
 	</script>
 <body>
 	<header>
-		<nav id="header-nav" class="navbar navbar-default">
+		<nav id="header-nav" class="navbar navbar-default navbar-expand">
 			<div class="container">
 				<div class="navbar-header">
 
@@ -27,7 +27,7 @@
 						<a href="LOGIN.html"><h1>BANK</h1></a>
 					</div>
 
-					<button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+					<button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse"  data-target="#collapsable-nav" aria-controls="collapsable-nav" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -35,21 +35,20 @@
 					</button>
 				 </div>
 
-				<div id="collapsable-nav" class="collapse navbar-collapse">
+				<div id="collapsable-nav" class="navbar-collapse collapse show">
 					<ul id="nav-list" class="nav navbar-nav navbar-right">
 						<li id="navHomeButton" class="active">
-							<a href="LOGIN.html" onclick="$dc.buildAndShowHomeHTML();">
+							<a href="LOGIN.html" target="_self" class="btn" role="button">
 									<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Log In
 								</a>
-							</li>
+						</li>
 							<li id="navMenuButton">
-								
-								<a href="SIGN.html" onclick="$dc.buildAndShowHomeHTML2();">
+								<a href="SIGN.html" target="_self" class="btn" role="button" >
 									<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Sign In
 								</a>
 							</li>
 							<li id="navaboutButton">
-								<a href="ABOUT.html" onclick="$dc.buildAndShowHomeHTML3();">
+								<a href="ABOUT.html" target="_self" class="btn" role="button">
 									<span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About
 								</a>
 							</li>
@@ -86,9 +85,9 @@
 				</div>
 			</footer>
 
-			<script src="/js/jquery.min.js" async></script>
-			<script src="/js/bootstrap.min.js" async></script>
-			<script src="/js/ajax-utils.js" async></script>
-			<script src="/js/script.js" async></script>
-			</body>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/bootstrap.min.js"></script>
+			<script src="js/ajax-utils.js"></script>
+			<script src="js/script.js"></script>
+		</body>
 		</html>
