--- a/SIGN.html
+++ b/SIGN.html
@@ -27,7 +27,7 @@
 						<a href="LOGIN.html"><h1>BANK</h1></a>
 					</div>
 
-					<button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+					<button id="navbarToggle" type="button" class="navbar-toggle collapsed"  data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="true">
 						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -35,26 +35,25 @@
 					</button>
 				 </div>
 
-				<div id="collapsable-nav" class="collapse navbar-collapse">
+				<div id="collapsable-nav" class="navbar-collapse">
 					<ul id="nav-list" class="nav navbar-nav navbar-right">
-						<li id="navHomeButton" class="active">
-							<a href="LOGIN.html" onclick="$dc.buildAndShowHomeHTML();">
+						    <li id="navHomeButton">
+							    <a href="LOGIN.html" class="btn" role="button">
 									<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Log In
 								</a>
 							</li>
-							<li id="navMenuButton">
-								
-								<a href="SIGN.html" onclick="$dc.buildAndShowHomeHTML2();">
-									<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Sign In
+							<li id="navMenuButton" class="active">
+								<a href="SIGN.html" class="btn" role="button">
+									<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Sign Up
 								</a>
 							</li>
 							<li id="navaboutButton">
-								<a href="ABOUT.html" onclick="$dc.buildAndShowHomeHTML3();">
+								<a href="ABOUT.html" class="btn" role="button">
 									<span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About
 								</a>
 							</li>
 					</ul>
-					</div>
+				</div>
 				</div>
 			</nav>
 		</header>
@@ -85,9 +84,10 @@
 					<div class="text-center">&copy; Copyright 2017</div>
 				</div>
 			</footer>
+
 			<script src="js/jquery.min.js"></script>
 			<script src="js/bootstrap.min.js"></script>
 			<script src="js/ajax-utils.js"></script>
 			<script src="js/script.js"></script>
-			</body>
+		</body>
 		</html>
