--- a/snippet/home-snippet-2.html
+++ b/snippet/home-snippet-2.html
@@ -1,5 +1,5 @@
   <div class="jumbotron">
-    <div class="headbox text-center">Sign In</div>
+    <div class="headbox text-center">Sign Up</div>
       <div class="content">
         <form action="/process_pos" method="POST">
           <div class=".flex-container">
@@ -10,7 +10,7 @@
           <br>
             <div class="text-center .col-lg-1 .col-md-1 .col-sm-1">
           <label for="p">Please Enter Password </label>
-          <input type="text" id="u2" name="form1">
+          <input type="password" id="u2" name="form1">
         </div>
           <br>
             <div class="text-center .col-lg-1 .col-md-1 .col-sm-1">
