--- a/snippet/home-snippet.html
+++ b/snippet/home-snippet.html
@@ -10,7 +10,7 @@
         <br>
         <div class="text-center .col-md-1 .col-lg-1 .col-sm-1">
         <label for="p">Password</label>
-        <input type="text" id="u2" name="form1">
+        <input type="password" id="u2" name="form1">
       </div>
     </div>
       <div class="container">
