--- a/ABOUT.html
+++ b/ABOUT.html
@@ -44,7 +44,7 @@
 							</li>
 							<li id="navMenuButton">
 								<a href="SIGN.html" class="btn" role="button">
-									<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Sign In
+									<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Sign Up
 								</a>
 							</li>
 							<li id="navaboutButton" class="active">
