--- a/snippet/check.html
+++ b/snippet/check.html
@@ -7,10 +7,9 @@
     <title>Processing</title>
 </head>
 <script>
-    
-    alert("Your data is not submitted");
-    var url = window.location.href;
-		window.location.replace(url.replace(new RegExp("process_pos","g"),"SIGN.html"));
+    alert("Submitted!!");
+        var url = window.location.href;
+		window.location.replace(url.replace(new RegExp("check","g"),"LOGIN.html"));
 </script>
 <body>
     
