--- a/snippet/process_pos1.html
+++ b/snippet/process_pos1.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Processing</title>
+    <title>Processingt</title>
 </head>
 <script>
-    alert("Submitted!!");
-        var url = window.location.href;
-		window.location.replace(url.replace(new RegExp("check","g"),"LOGIN.html"));
+    alert("successfull login!!");
+    var url = window.location.href;
+		window.location.replace(url.replace(new RegExp("process_pos1","g"),"LOGIN.html"));
 </script>
 <body>
-    
     
 </body>
 </html>
