--- a/snippet/check.html
+++ b/snippet/check.html
@@ -7,7 +7,7 @@
     <title>Processing</title>
 </head>
 <script>
-    alert("Submitted!!");
+    alert("{{data}}");
         var url = window.location.href;
 		window.location.replace(url.replace(new RegExp("check","g"),"LOGIN.html"));
 </script>
